--- a/Project1-robot_localization/Prototype_particle_filter/readme
+++ b/Project1-robot_localization/Prototype_particle_filter/readme
@@ -1,3 +1,5 @@
 * Ini adalah program awal saat riset tentang particle filter
 * pertama jalankan program map_database.py untuk generate database map yang akan digunakan pada pf_test.py
 * Setelah generate file data_map.npy selesai, selanjutnya tinggal menjalankan program pf_test.py
+
+*SARAN: agar lebih cepat, bisa download file data_map.npy disini (https://drive.google.com/file/d/1aSnB_YGrFyUbM0Jv823cMUxsoCG_91rt/view?usp=share_link)
