--- a/Project2-voice_command/Data_pengujian/readme
+++ b/Project2-voice_command/Data_pengujian/readme
@@ -1,1 +1,1 @@
-#PENTING : Data rekaman suara yang digunakan pada penelitian ini dapat dilihat pada link berikut ()
+#PENTING : File rekaman suara yang digunakan pada penelitian ini dapat dilihat pada link berikut ()
