--- a/Project2-voice_command/Program/readme
+++ b/Project2-voice_command/Program/readme
@@ -1,1 +1,1 @@
-# Model CNN hasil proses training dapa dilihat pada link berikut ()
+# Model CNN hasil proses training dapa dilihat pada link berikut (https://drive.google.com/file/d/1JCF3M32GLLk0Pj4easYbDyxV4JsYBiLy/view?usp=share_link)
