--- a/Project2-voice_command/Data_pengujian/readme
+++ b/Project2-voice_command/Data_pengujian/readme
@@ -1,1 +1,1 @@
-#PENTING : File rekaman suara yang digunakan pada penelitian ini dapat dilihat pada link berikut ()
+#PENTING : File rekaman suara yang digunakan pada penelitian ini dapat dilihat pada link berikut (https://drive.google.com/drive/folders/1DIYjv8cuGyhvz8dNONiBCr4f_w2JyHoM?usp=share_link)
