--- a/Project2-voice_command/readme
+++ b/Project2-voice_command/readme
@@ -1,1 +1,1 @@
-PROJECT 2: Sistem Pengenalan Suara untuk Perintah pada Robot Sepak Bola Beroda
+PROJECT 2: Voice Recognition System for Commands on Wheeled Soccer Robots
