--- a/Project2-voice_command/Test_data/readme
+++ b/Project2-voice_command/Test_data/readme
@@ -1,1 +1,1 @@
-#PENTING : File rekaman suara yang digunakan pada penelitian ini dapat dilihat pada link berikut (https://drive.google.com/drive/folders/1DIYjv8cuGyhvz8dNONiBCr4f_w2JyHoM?usp=share_link)
+# NOTE: Voice recording data that used in this research can be seen here (https://drive.google.com/drive/folders/1DIYjv8cuGyhvz8dNONiBCr4f_w2JyHoM?usp=share_link)
