--- a/Project2-voice_command/Program/readme
+++ b/Project2-voice_command/Program/readme
@@ -1,1 +1,2 @@
 # NOTE: Download semua file pada folder "speech_test_realtime" untuk mencoba kemampuan prediksi perintah dengan CNN secara langsung
+# NOTE: Download all files in the "speech_test_realtime" folder to try CNN ability to recognize voice commands
