--- a/Project3-heart_disease_detector/readme
+++ b/Project3-heart_disease_detector/readme
@@ -1,1 +1,1 @@
-PROJECT 3: Sistem Pendeteksi Penyakit Jantung Sejak Dini Berbasis Kecerdasan Buatan dengan Metode ANN (Artificial Neural Network)
+PROJECT 3: Heart Disease Detection System with ANN (Artificial Neural Network)
