--- a/Project4-robot_line_follower/Program/readme
+++ b/Project4-robot_line_follower/Program/readme
@@ -1,2 +1,2 @@
-# Program robot line follower terdiri dari 4 file .ino
-# Program utama robot adalah file line_follower_V1.ino
+# Line Follower program consists of 4 files ".ino"
+# The main program is "line_follower_V1.ino"
