--- a/Project5-robot_transporter_IoT/Program/readme
+++ b/Project5-robot_transporter_IoT/Program/readme
@@ -1,1 +1,1 @@
-# Folder coba_program merupakan program riset untuk akses setiap sensor
+# "trial_program" folder is a research program to access each sensors
