--- a/Project2-voice_command/Program/speech_test_realtime/readme
+++ b/Project2-voice_command/Program/speech_test_realtime/readme
@@ -1,3 +1,3 @@
 # NOTE: Before run "speech_test_realtime.py", download the CNN model "cnn_speech_model.h5" here (https://drive.google.com/file/d/13_4eZy7YVbtBovbESwjWnR7NpM342GZ3/view?usp=share_link)
 # There are 7 commands that can be recognized ['Corner', 'Dropball', 'Goalkick', 'Kalibrasi', 'Kickoff', 'Stop', 'Tendang']
-# After run "speech_test_realtime.py", wait until wait until text "* Listening mic" appears before speaking
+# After run "speech_test_realtime.py", wait until "* Listening mic" text appears before speaking
